identify variants by chrom-start-ref-alt + improve rarest/most_common variants
The endpoints rarest/most_common variants are now faster and it is possible to customize the number of output variants as well as specify a minimum/maximum frequency treshold
